option('BW_LOG', type: 'boolean', value: true, description: 'Log all debug statements')
option('BW_LOG_FUNCTIONS', type: 'boolean', value: true, description: 'Log debug function statements')
option('BW_LOG_ERRORS', type: 'boolean', value: true, description: 'Log debug errors')
option('BW_LOG_GEN', type: 'boolean', value: true, description: 'Log general debug statements')
